search bar button fix. Might need relocating for mobile-collapse-view. Needs functioning

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -135,21 +135,6 @@ header {
 }
 
 /* Search Bar */
-/* * {
-	outline: none;
-} */
-
-html,
-body {
-	height: 100%;
-	min-height: 100%;
-}
-
-body {
-	margin: 0;
-	/* background-color: #0061A3; */
-}
-
 .td {
 	display: table-cell;
 	vertical-align: middle;
@@ -157,7 +142,7 @@ body {
 
 input,
 button {
-	color: #0061A3;
+	color: #0061a3;
 	padding: 0;
 	margin: 0;
 	border: 0;
@@ -168,12 +153,12 @@ button {
 	position: absolute;
 	left: 0;
 	right: 0;
-	width: 550px;
+	width: 480px;
 	padding: 10px;
-	margin:  0 auto;
+	margin: 0 auto;
 	background-color: #d8e5ff;
 	border-radius: 999px;
-	/* box-shadow: 0 10px 40px #0061A3, 0 0 0 20px #ffffff; */
+	/* box-shadow: 0 10px 40px #0061a3, 0 0 0 20px #ffffff; */
 	transform: scale(0.6);
 }
 
@@ -185,11 +170,16 @@ input[type="text"] {
 	width: 100%;
 	height: 48px;
 	font-size: 22pt;
-	/* line-height: 1; */
+	margin-left: 10px;
 }
 
 input[type="text"]::placeholder {
-	color: #0061A3;
+	color: #0061a3;
+}
+
+/* typing in the search bar */
+input:focus::-webkit-input-placeholder { 
+  color: #66a0c7; 
 }
 
 #s-cover {
@@ -200,7 +190,7 @@ input[type="text"]::placeholder {
 button {
 	position: relative;
 	display: block;
-	width: 84px;
+	width: 64px;
 	height: 48px;
 	cursor: pointer;
 }
@@ -208,41 +198,41 @@ button {
 /* magnifying glass */
 #s-circle {
 	position: relative;
-	top: -8px;
-	left: 0;
-	width: 43px;
-	height: 43px;
+	top: -6px;
+	left: 8px;
+	width: 28px;
+	height: 28px;
 	margin-top: 0;
-	border-width: 15px;
-	border: 15px solid #0061A3;
+	border-width: 5px;
+	border: 5px solid #0061a3;
 	background-color: transparent;
 	border-radius: 50%;
 	transition: 0.2s ease all;
 }
-
+/* magnifying glass stem */
 button span {
 	position: absolute;
-	top: 68px;
-	left: 43px;
+	top: 34px;
+	left: 27px;
 	display: block;
-	width: 45px;
-	height: 15px;
+	width: 20px;
+	height: 5px;
 	background-color: transparent;
 	border-radius: 10px;
 	transform: rotateZ(52deg);
 	transition: 0.2s ease all;
 }
 
-/* magnifying glass stem */
+/* magnifying glass stem movement */
 button span:before,
 button span:after {
 	content: "";
 	position: absolute;
 	bottom: 0;
 	right: 0;
-	width: 45px;
-	height: 15px;
-	background-color: #0061A3;
+	width: 20px;
+	height: 5px;
+	background-color: #0061a3;
 	border-radius: 10px;
 	transform: rotateZ(0);
 	transition: 0.2s ease all;
@@ -251,28 +241,28 @@ button span:after {
 /* Arrow stem */
 #s-cover:hover #s-circle {
 	top: -1px;
-	width: 67px;
-	height: 15px;
+	width: 45px;
+	height: 5px;
 	border-width: 0;
-	background-color: #0061A3;
+	background-color: #0061a3;
 	border-radius: 20px;
 }
 
 #s-cover:hover span {
 	top: 50%;
-	left: 56px;
+	left: 25px;
 	width: 25px;
-	margin-top: -9px;
+	margin-top: -3px;
 	transform: rotateZ(0);
 }
 
 #s-cover:hover button span:before {
-	bottom: 11px;
-	transform: rotateZ(52deg);
+	bottom: 8px;
+  transform: rotateZ(52deg);
 }
 
 #s-cover:hover button span:after {
-	bottom: -11px;
+	bottom: -6px;
 	transform: rotateZ(-52deg);
 }
 
@@ -280,27 +270,10 @@ button span:after {
 #s-cover:hover button span:before,
 #s-cover:hover button span:after {
 	right: -6px;
-	width: 40px;
-	background-color: #0061A3;
+	width: 20px;
+	background-color: #0061a3;
 }
-
-#ytd-url {
-	display: block;
-	position: fixed;
-	right: 0;
-	bottom: 0;
-	padding: 10px 14px;
-	margin: 20px;
-	color: #fff;
-	font-family: Nunito;
-	font-size: 14px;
-	text-decoration: none;
-	background-color: #ff7575;
-	border-radius: 4px;
-	box-shadow: 0 10px 20px -5px rgba(255, 117, 117, 0.86);
-	z-index: 125;
-}
-
+/* end Search Bar */
 
 .row {
   margin: 0;
